--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "pm2 start ./bin/www"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -19,6 +19,7 @@
     "node-zip": "^1.1.1",
     "nodemon": "^2.0.4",
     "pdfkit": "^0.11.0",
+    "pm2": "^4.4.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
   }
