--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdfkit": "^0.11.0",
     "pm2": "^4.4.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "zip-local": "^0.3.4"
   }
 }
