--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pm2": "^4.4.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "rimraf": "^3.0.2",
     "zip-local": "^0.3.4"
   }
 }
